force-app/main/default/objects/Contact/fields/Favorite_Football_Team__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Football_Team__c</fullName>
    <label>Favorite Football Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eagles</fullName>
            </value>
            <value>
                <fullName>Bills</fullName>
            </value>
            <value>
                <fullName>Rams</fullName>
            </value>
            <value>
                <fullName>Packers</fullName>
            </value>
            <value>
                <fullName>Bears</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>