force-app/main/default/objects/Contact/fields/Favorite_Magazine__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Magazine__c</fullName>
    <label>Favorite Magazine</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HIM</fullName>
            </value>
            <value>
                <fullName>ESPN</fullName>
            </value>
            <value>
                <fullName>Health Fitness</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>