force-app/main/default/objects/Contact/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <description>Height of the contact in centimetres (cm).</description>
    <label>Height (cm)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>