force-app/main/default/objects/Contact/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <description>Weight of the contact in kilograms (kg).</description>
    <label>Weight (kg)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>